# wtf-terminal-ai

./: .gitignore  .sandbox-config-explanation.md  .sandbox-config.json  404.html  CLAUDE_CODE_PROMPT.md  CODE_CLEANUP_REPORT.md  PRODUCTION_READINESS.md  README.md  REVIEW.md  SANDBOX_GUIDE.md  SPEC.md  TASKS.md  index.html  initialprompt.md  install.sh  llm-api-key-url-proposal.md  llm-provider-metadata-proposal.md  mkdocs.yml  publish.sh  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
acknowledgments/: index.html
comparison/: index.html
config/allowlist/: index.html
config/api-keys/: index.html
config/files/: index.html
config/web-search/: index.html
docs/: acknowledgments.md  comparison.md  faq.md  getting-started.md  index.md  quick-tour.md  setup.md  troubleshooting.md
docs/config/: allowlist.md  api-keys.md  files.md  web-search.md
docs/properties/: hooks.md  keys.md  memories.md  personality.md
docs/reference/: cli-options.md
docs/stylesheets/: terminal.css
faq/: index.html
getting-started/: index.html
instructions_from_the_creator/: CLAUDE_CODE_PROMPT.md  IMPLEMENTATION_STATUS.md  SPEC.md  TASKS.md  WEB_SEARCH_CAPABILITIES.md
properties/hooks/: index.html
quick-tour/: index.html
search/: search_index.json
setup/: index.html
stylesheets/: terminal.css
tests/: __init__.py  test_cli_options.py  test_meta_commands.py  test_new_tools.py  test_permissions.py  test_response_parser.py  test_state_machine.py  test_tools.py
troubleshooting/: index.html
wtf/: __init__.py  cli.py
wtf/ai/: client.py  (+3 more)
(+17 files in other folders)
